sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:30: error: type mismatch;
 found   : Int(0)
 required: Boolean
}while (0)
        ^